Finish front end for about section

--- a/frontend/src/Styles/General/_base.scss
+++ b/frontend/src/Styles/General/_base.scss
@@ -29,3 +29,13 @@ section {
   max-width: 120rem;
   margin: 0 auto;
 }
+p {
+  font-size: 2rem;
+  color: $lightGray;
+  font-weight: 600;
+}
+h2 {
+  font-size: 4.4rem;
+  color: $fontColor;
+  font-weight: 800;
+}
