--- a/frontend/src/Styles/Css/App.css
+++ b/frontend/src/Styles/Css/App.css
@@ -32,6 +32,18 @@ section {
   margin: 0 auto;
 }
 
+p {
+  font-size: 2rem;
+  color: #ada9bb;
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 4.4rem;
+  color: #fafefa;
+  font-weight: 800;
+}
+
 nav {
   height: 9rem;
   display: flex;
@@ -97,7 +109,8 @@ nav .nav-button-container {
 }
 
 .home {
-  margin: 9.6rem 0;
+  margin-top: 9.6rem;
+  margin-bottom: 19.2rem;
   width: 100%;
   display: grid;
   grid-template-columns: 2fr 1fr;
@@ -207,7 +220,7 @@ nav .nav-button-container {
   font-size: 3.2rem;
   font-weight: 700;
 }
-.home .content-con .slogans-container .sub-heading h2 {
+.home .content-con .slogans-container .sub-heading h4 {
   font-size: 1.6rem;
   color: #ada9bb;
 }
@@ -215,4 +228,21 @@ nav .nav-button-container {
   display: flex;
   flex-direction: row;
   gap: 2.3rem;
+}
+
+.about {
+  margin: 9.6rem 0;
+}
+.about .content-con {
+  display: flex;
+  gap: 6.4rem;
+}
+.about .content-con .info-con {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+  justify-content: center;
+}
+.about .content-con .info-con .desc p {
+  line-height: 30px;
 }
