--- a/frontend/src/Styles/Pages/hero-page.scss
+++ b/frontend/src/Styles/Pages/hero-page.scss
@@ -1,5 +1,6 @@
 .home {
-  margin: 9.6rem 0;
+  margin-top: 9.6rem;
+  margin-bottom: 19.2rem;
   width: 100%;
   display: grid;
   grid-template-columns: 2fr 1fr;
@@ -109,7 +110,7 @@
         }
       }
       .sub-heading {
-        h2 {
+        h4 {
           font-size: 1.6rem;
           color: $lightGray;
         }
