--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -9,3 +9,6 @@
 //pages
 @import "./Pages/hero-page.scss";
 @import "./Pages/about-page.scss";
+@import "./Pages/skillpage/skill-page";
+@import "./Pages/skillpage/skill-card";
+@import "./Pages/skillpage/skill-bar";
