--- a/frontend/src/Styles/Css/App.css
+++ b/frontend/src/Styles/Css/App.css
@@ -110,7 +110,7 @@ nav .nav-button-container {
 
 .home {
   margin-top: 9.6rem;
-  margin-bottom: 19.2rem;
+  margin-bottom: 12.8rem;
   width: 100%;
   display: grid;
   grid-template-columns: 2fr 1fr;
@@ -231,7 +231,7 @@ nav .nav-button-container {
 }
 
 .about {
-  margin: 9.6rem 0;
+  margin-bottom: 12.8rem;
 }
 .about .content-con {
   display: flex;
@@ -242,7 +242,143 @@ nav .nav-button-container {
   flex-direction: column;
   gap: 1.2rem;
   justify-content: center;
+  position: relative;
+}
+.about .content-con .info-con::after {
+  content: " ";
+  display: inline-block;
+  height: 50rem;
+  width: 50rem;
+  background-color: #e300cb;
+  filter: blur(110px);
+  z-index: -30;
+  opacity: 60%;
+  border-radius: 50%;
+  position: absolute;
+  top: -100px;
+  right: -250px;
+}
+.about .content-con .info-con .desc::after {
+  content: " ";
+  display: inline-block;
+  height: 50rem;
+  width: 50rem;
+  background-color: #1649ff;
+  filter: blur(110px);
+  z-index: -30;
+  opacity: 60%;
+  border-radius: 50%;
+  position: absolute;
+  bottom: -171px;
+  right: -200px;
 }
 .about .content-con .info-con .desc p {
   line-height: 30px;
+}
+
+.skill {
+  margin-bottom: 12.8rem;
+}
+.skill .content-con {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 4.8rem;
+  align-items: center;
+  justify-content: center;
+}
+.skill .content-con .skill-con {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.skill .content-con .skill-con .skill-heading h2 {
+  padding: 1rem;
+  padding-left: 0;
+}
+.skill .content-con .skill-con .skill-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 4.8rem;
+}
+.skill .bar-con {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+.skill .bar-con .bar-heading h3 {
+  font-size: 3.6rem;
+  font-weight: 700;
+  color: #fafefa;
+}
+
+.skill-card-con .skill-name {
+  position: relative;
+  border-radius: 17px; /*1*/
+  border: 2px solid transparent;
+  background: linear-gradient(130deg, #1649ff, rgba(227, 0, 204, 0.314), rgba(227, 0, 204, 0.296), #1649ff) border-box;
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+}
+.skill-card-con .skill-name h4 {
+  font-size: 2.4rem;
+  color: #fafefa;
+  padding: 5rem;
+  background-image: linear-gradient(80deg, #2c313f, #141a2a);
+  border-radius: 17px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10000;
+}
+.skill-card-con .skill-name .skill-svg {
+  position: absolute;
+  display: inline-block;
+  border-radius: 8px;
+  border: 2px solid transparent;
+  background: linear-gradient(130deg, #1649ff, rgba(227, 0, 204, 0.314), rgba(227, 0, 204, 0.296), #1649ff) border-box;
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  top: -25px;
+  left: -25px;
+}
+.skill-card-con .skill-name .skill-svg .svg {
+  padding: 1rem;
+  background-image: linear-gradient(80deg, #2c313f, #141a2a);
+  display: inline-block;
+  border-radius: 8px;
+}
+
+.skill-bar-con {
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+}
+.skill-bar-con .bar-heading {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.skill-bar-con .bar-heading h4 {
+  font-size: 2.4rem;
+  color: #fafefa;
+  font-weight: bold;
+  padding: 1rem 0;
+}
+.skill-bar-con .skill-bar {
+  width: 100%;
+  height: 1rem;
+  border-radius: 7px;
+  overflow: hidden;
+  position: relative;
+  background-color: #484554;
+}
+.skill-bar-con .skill-bar span {
+  height: 100%;
+  display: block;
+  width: 0;
+  background-image: linear-gradient(130deg, #1649ff, #e300cb);
+  line-height: 30px;
+  position: absolute;
+  border-radius: 7px;
 }
