--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -6,9 +6,11 @@
 @import "./Components/navbar.scss";
 @import "./Components/nav-button";
 @import "./Components/button";
+@import "./Components/project-card";
 //pages
 @import "./Pages/hero-page.scss";
 @import "./Pages/about-page.scss";
 @import "./Pages/skillpage/skill-page";
 @import "./Pages/skillpage/skill-card";
 @import "./Pages/skillpage/skill-bar";
+@import "./Pages/portfolio-page/portfolio-page";
