--- a/frontend/src/Styles/Css/App.css
+++ b/frontend/src/Styles/Css/App.css
@@ -108,6 +108,55 @@ nav .nav-button-container {
   color: #ada9bb;
 }
 
+.project-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 6.4rem;
+  align-items: center;
+}
+.project-card .info-con {
+  display: flex;
+  flex-direction: column;
+  gap: 3.6rem;
+}
+.project-card .info {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.project-card .info .header-con {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.project-card .info .header-con h4 {
+  color: #fafefa;
+  font-size: 3.2rem;
+}
+.project-card .info .header-con .tech-info {
+  display: inline-block;
+  border-radius: 8px;
+  border: 2px solid transparent;
+  background: linear-gradient(130deg, #1649ff, rgba(227, 0, 204, 0.314), rgba(227, 0, 204, 0.296), #1649ff) border-box;
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  top: -25px;
+  left: -25px;
+}
+.project-card .info .header-con .tech-info .svg {
+  padding: 0.5rem 1rem;
+  background-image: linear-gradient(80deg, #2c313f, #141a2a);
+  display: inline-block;
+  border-radius: 8px;
+}
+.project-card .desc-con p {
+  line-height: 3rem;
+}
+.project-card .button-con {
+  display: flex;
+  gap: 2.4rem;
+}
+
 .home {
   margin-top: 9.6rem;
   margin-bottom: 12.8rem;
@@ -277,7 +326,7 @@ nav .nav-button-container {
 }
 
 .skill {
-  margin-bottom: 12.8rem;
+  margin-bottom: 14.8rem;
 }
 .skill .content-con {
   display: grid;
@@ -289,11 +338,43 @@ nav .nav-button-container {
 .skill .content-con .skill-con {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 4rem;
+  position: relative;
+}
+.skill .content-con .skill-con::after {
+  content: " ";
+  display: inline-block;
+  height: 50rem;
+  width: 50rem;
+  background-color: #1649ff;
+  filter: blur(110px);
+  z-index: -30;
+  opacity: 60%;
+  border-radius: 50%;
+  position: absolute;
+  top: 205px;
+  right: 79px;
+}
+.skill .content-con .skill-con .skill-heading {
+  position: relative;
 }
 .skill .content-con .skill-con .skill-heading h2 {
   padding: 1rem;
   padding-left: 0;
+}
+.skill .content-con .skill-con .skill-heading::after {
+  content: " ";
+  display: inline-block;
+  height: 50rem;
+  width: 50rem;
+  background-color: #e300cb;
+  filter: blur(110px);
+  z-index: -30;
+  opacity: 60%;
+  border-radius: 50%;
+  position: absolute;
+  top: -178px;
+  right: 191px;
 }
 .skill .content-con .skill-con .skill-cards {
   display: grid;
@@ -381,4 +462,27 @@ nav .nav-button-container {
   line-height: 30px;
   position: absolute;
   border-radius: 7px;
+}
+
+.portfolio .content-con {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 6.4rem;
+}
+.portfolio .content-con .header-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2.6rem;
+}
+.portfolio .content-con .header-container .heading h2 {
+  text-align: center;
+}
+.portfolio .content-con .header-container .heading h2 span {
+  color: #1649ff;
+}
+.portfolio .project-con {
+  display: flex;
+  flex-direction: column;
+  gap: 8.6rem;
 }
