--- a/frontend/src/Styles/Pages/portfolio-page/_portfolio-page.scss
+++ b/frontend/src/Styles/Pages/portfolio-page/_portfolio-page.scss
@@ -1,4 +1,34 @@
 .portfolio {
+  position: relative;
+  margin: 12.6rem;
+  &::after {
+    content: " ";
+    display: inline-block;
+    height: 50rem;
+    width: 50rem;
+    background-color: $secondary;
+    filter: blur(210px);
+    z-index: -30;
+    opacity: 60%;
+    border-radius: 50%;
+    position: absolute;
+    left: -227px;
+    top: -14px;
+  }
+  &::before {
+    content: " ";
+    display: inline-block;
+    height: 50rem;
+    width: 50rem;
+    background-color: $primary;
+    filter: blur(210px);
+    z-index: -30;
+    opacity: 60%;
+    border-radius: 50%;
+    position: absolute;
+    right: -227px;
+    bottom: -180px;
+  }
   .content-con {
     display: flex;
     flex-direction: column;
