--- a/frontend/src/Styles/Pages/portfolio-page/_portfolio-page.scss
+++ b/frontend/src/Styles/Pages/portfolio-page/_portfolio-page.scss
@@ -1,6 +1,6 @@
 .portfolio {
   position: relative;
-  margin: 12.6rem;
+  margin-bottom: 25.6rem;
   &::after {
     content: " ";
     display: inline-block;
