--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -18,3 +18,6 @@
 @import "./Pages/ContactPage/contact-page";
 @import "./Pages/ContactPage/contact-form";
 @import "./Pages/ContactPage/social-element";
+@import "./Pages/Footer/footer";
+@import "./Pages/Footer/footer-socials";
+@import "./Components/button-hover";
