--- a/frontend/src/Styles/Components/_nav-button.scss
+++ b/frontend/src/Styles/Components/_nav-button.scss
@@ -1,14 +1,19 @@
 .nav-button-container {
   button {
     background-color: $primary;
+    cursor: pointer;
     padding: 1rem;
     border-radius: 8px;
     font-size: 2rem;
     color: $fontColor;
-    font-weight: 700;
+    font-weight: 600;
     border-style: none;
-    &:hover {
-      background-color: #123acc;
+    font-family: inherit;
+    transition: 600ms;
+    &:hover,
+    &:focus {
+      box-shadow: 0 0.5em 0.5em -0.4em $priSecGrad;
+      transform: translateY(-0.25em);
     }
   }
 }
