--- a/frontend/src/Styles/Components/_navbar.scss
+++ b/frontend/src/Styles/Components/_navbar.scss
@@ -2,9 +2,12 @@ nav {
   height: 9rem;
   display: flex;
   justify-content: space-between;
+  margin-top: 1rem;
   .logo-container {
     display: flex;
     flex-direction: row;
+    margin-top: 1rem;
+    cursor: pointer;
     .logo-text {
       color: $fontColor;
       font-size: 3.2rem;
@@ -18,13 +21,56 @@ nav {
   .nav-links {
     color: $fontColor;
     font-size: 2rem;
-    font-weight: bold;
+    font-weight: 500;
     display: flex;
     align-items: center;
     ul {
       display: flex;
       gap: 4.2rem;
       justify-content: center;
+      li {
+        position: relative;
+        &:hover {
+          opacity: 1;
+        }
+        &::before {
+          transition: 500ms;
+          height: 5px;
+          content: "";
+          position: absolute;
+          background-color: $fontColor;
+          box-shadow: inset 0 0 3px $primary;
+          border-radius: 7px;
+          width: 0%;
+          top: 30px;
+        }
+        &:hover::before,
+        &:active::before {
+          width: 100%;
+        }
+        a {
+          position: relative;
+          &:hover {
+            opacity: 1;
+          }
+          &::before {
+            transition: 500ms;
+            height: 12px;
+            content: "";
+            position: absolute;
+            background-color: $primary;
+            z-index: -1;
+            filter: blur(10px);
+            border-radius: 7px;
+            width: 0%;
+            top: 25px;
+          }
+          &:hover::before,
+          &:active::before {
+            width: 105%;
+          }
+        }
+      }
     }
   }
   .nav-button-container {
