--- a/frontend/src/Styles/General/_variables.scss
+++ b/frontend/src/Styles/General/_variables.scss
@@ -15,3 +15,10 @@ $borderGrad: linear-gradient(
   rgba(227, 0, 204, 0.296),
   $primary
 );
+$hoverGrad: linear-gradient(
+  130deg,
+  rgb(110, 125, 245),
+  rgb(227, 0, 204),
+  rgb(227, 0, 204),
+  rgb(110, 125, 245)
+);
