--- a/frontend/src/Styles/Pages/ContactPage/_contact-form.scss
+++ b/frontend/src/Styles/Pages/ContactPage/_contact-form.scss
@@ -3,12 +3,28 @@
     display: flex;
     flex-direction: column;
     gap: 3.6rem;
+    position: relative;
+    &::after {
+      content: " ";
+      display: inline-block;
+      height: 50rem;
+      width: 50rem;
+      background-color: $secondary;
+      filter: blur(170px);
+      z-index: -30;
+      opacity: 60%;
+      border-radius: 50%;
+      position: absolute;
+      bottom: -100px;
+      right: -250px;
+    }
     .form-input {
       display: flex;
       flex-direction: column;
       label {
         font-size: 1.6rem;
         color: $lightGray;
+        font-weight: 600;
       }
       input[type="text"],
       input[type="email"] {
