--- a/frontend/src/Styles/Components/_navbar.scss
+++ b/frontend/src/Styles/Components/_navbar.scss
@@ -1,80 +1,92 @@
-nav {
-  height: 9rem;
+.nav-bar {
+  width: 100%;
   display: flex;
-  justify-content: space-between;
-  margin-top: 1rem;
-  .logo-container {
+  padding: 0.5rem;
+  justify-content: center;
+  nav {
+    height: 9rem;
     display: flex;
-    flex-direction: row;
-    margin-top: 1rem;
-    cursor: pointer;
-    .logo-text {
+    justify-content: space-between;
+
+    z-index: 1000;
+    width: 100%;
+    .logo-container {
+      display: flex;
+      flex-direction: row;
+
+      cursor: pointer;
+      .logo-text {
+        color: $fontColor;
+        font-size: 3.2rem;
+        display: flex;
+        align-items: center;
+      }
+      .logo-img {
+        height: 100%;
+        align-items: center;
+      }
+    }
+    .nav-links {
       color: $fontColor;
-      font-size: 3.2rem;
+      font-size: 2rem;
+      font-weight: 500;
       display: flex;
       align-items: center;
-    }
-    .logo-img {
-      height: 100%;
-    }
-  }
-  .nav-links {
-    color: $fontColor;
-    font-size: 2rem;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    ul {
-      display: flex;
-      gap: 4.2rem;
-      justify-content: center;
-      li {
-        position: relative;
-        &:hover {
-          opacity: 1;
-        }
-        &::before {
-          transition: 500ms;
-          height: 5px;
-          content: "";
-          position: absolute;
-          background-color: $fontColor;
-          box-shadow: inset 0 0 3px $primary;
-          border-radius: 7px;
-          width: 0%;
-          top: 30px;
-        }
-        &:hover::before,
-        &:active::before {
-          width: 100%;
-        }
-        a {
+      ul {
+        display: flex;
+        gap: 4.2rem;
+        justify-content: center;
+        li {
+          cursor: pointer;
           position: relative;
           &:hover {
             opacity: 1;
           }
           &::before {
             transition: 500ms;
-            height: 12px;
+            height: 5px;
             content: "";
             position: absolute;
-            background-color: $primary;
-            z-index: -1;
-            filter: blur(10px);
+            background-color: $fontColor;
+            box-shadow: inset 0 0 3px $primary;
             border-radius: 7px;
             width: 0%;
-            top: 25px;
+            top: 30px;
           }
           &:hover::before,
           &:active::before {
-            width: 105%;
+            width: 100%;
+          }
+          a {
+            cursor: pointer;
+            position: relative;
+            &:hover {
+              opacity: 1;
+            }
+            &::before {
+              transition: 500ms;
+              height: 12px;
+              content: "";
+              position: absolute;
+              background-color: $primary;
+              z-index: -1;
+              filter: blur(10px);
+              border-radius: 7px;
+              width: 0%;
+              top: 25px;
+            }
+            &:hover::before,
+            &:active::before {
+              width: 105%;
+            }
           }
         }
       }
     }
-  }
-  .nav-button-container {
-    display: flex;
-    align-items: center;
+    .nav-button-container {
+      display: flex;
+      align-items: center;
+      z-index: 10000;
+    }
   }
 }
