Added and styled all project page

--- a/frontend/src/Styles/app.scss
+++ b/frontend/src/Styles/app.scss
@@ -21,3 +21,4 @@
 @import "./Pages/Footer/footer";
 @import "./Pages/Footer/footer-socials";
 @import "./Components/button-hover";
+@import "./Pages/AllProjects/all-projects.scss";
