--- a/frontend/src/Styles/Css/App.css
+++ b/frontend/src/Styles/Css/App.css
@@ -702,7 +702,7 @@ footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 2.4rem;
-  margin: 12.6rem 0;
+  margin: 6.4rem 0;
 }
 footer .slogan-con {
   display: flex;
@@ -845,4 +845,73 @@ footer .logo-con .socials .social {
   bottom: 100%;
   transition: 1s;
   transition-delay: 0.75s;
+}
+
+.all-projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6.4rem;
+  padding-top: 9.6rem;
+  padding-bottom: 9.6rem;
+}
+.all-projects .heading-con {
+  margin-bottom: 3.2rem;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-left: 3rem;
+  align-items: center;
+}
+.all-projects .heading-con .button-con button {
+  padding: 0.6rem;
+}
+.all-projects .project-con {
+  display: flex;
+  flex-direction: column;
+  gap: 6.4rem;
+}
+
+.ani-grad {
+  background: linear-gradient(132deg, hsla(227, 100%, 54%, 0.25), hsla(306, 100%, 45%, 0.25), #141a2a, #141a2a, hsla(227, 100%, 54%, 0.25), hsla(306, 100%, 45%, 0.25), #141a2a, #141a2a);
+  background-size: 800% 800%;
+  -webkit-animation: AnimationName 22s ease infinite;
+  -moz-animation: AnimationName 22s ease infinite;
+  animation: AnimationName 22s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 2% 0%;
+  }
+  50% {
+    background-position: 99% 100%;
+  }
+  100% {
+    background-position: 2% 0%;
+  }
+}
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 2% 0%;
+  }
+  50% {
+    background-position: 99% 100%;
+  }
+  100% {
+    background-position: 2% 0%;
+  }
+}
+@keyframes AnimationName {
+  0% {
+    background-position: 2% 0%;
+  }
+  50% {
+    background-position: 99% 100%;
+  }
+  100% {
+    background-position: 2% 0%;
+  }
 }
