--- a/frontend/src/Styles/Pages/AllProjects/all-projects.scss
+++ b/frontend/src/Styles/Pages/AllProjects/all-projects.scss
@@ -16,7 +16,7 @@
     align-items: center;
     .button-con {
       button {
-        padding: 0.6rem;
+        padding: 1rem;
       }
     }
   }
@@ -24,6 +24,20 @@
     display: flex;
     flex-direction: column;
     gap: 6.4rem;
+  }
+  .button-con {
+    .all-p {
+      position: fixed;
+      bottom: 100px;
+      right: 100px;
+      border-radius: 20px;
+      transform: scale(0);
+      transition: 200ms ease-in-out;
+      padding: 1rem !important;
+    }
+    .show {
+      transform: scale(1.1);
+    }
   }
 }
 
