--- a/admin/src/Scss/style.scss
+++ b/admin/src/Scss/style.scss
@@ -1,4 +1,9 @@
-@use "./Pages/Aside/Aside.scss";
+//Pages
 @use "./Pages/AdminPanel/admin-panel.scss";
 @use "./Pages/MainPanel/main-panel.scss";
+@use "./Pages/Messages/messages.scss";
+//componets
+@use "./Pages/Aside/Aside.scss";
 @use "./Components/action-button.scss";
+@use "./Pages/MainPanel/info-box.scss";
+@use "./Pages/Messages/message.scss";
