--- a/admin/src/Scss/Components/action-button.scss
+++ b/admin/src/Scss/Components/action-button.scss
@@ -1,24 +1,38 @@
 @use "../General/" as g;
+
 .action-btn {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 1.6rem;
-  transition: 100ms ease-in;
-  &:hover {
-    background-color: #2c313f;
-    cursor: pointer;
-  }
-  padding: 0.8rem;
-  border-radius: 8px;
-  .action-svg {
+  a {
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
-  }
-  .action-name {
-    font-size: 2.4rem;
-    color: g.$lightGray;
-    font-weight: 400;
+    gap: 1.6rem;
+    transition: 100ms ease-in;
+    padding: 0.8rem;
+    border-radius: 8px;
+    &:hover {
+      background-color: #2c313f;
+      cursor: pointer;
+    }
+    &.active {
+      background-color: g.$primary;
+      .action-name {
+        color: g.$fontColor;
+      }
+      .action-svg {
+        svg {
+          fill: g.$fontColor;
+        }
+      }
+    }
+    .action-svg {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .action-name {
+      font-size: 2.4rem;
+      color: g.$lightGray;
+      font-weight: 400;
+    }
   }
 }
