--- a/admin/src/Scss/Pages/MainPanel/main-panel.scss
+++ b/admin/src/Scss/Pages/MainPanel/main-panel.scss
@@ -1,7 +1,5 @@
 @use "../../General/" as g;
 .main-panel {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-  width: 80%;
+  display: flex;
+  height: 100vh;
 }
