--- a/admin/src/Scss/Pages/Messages/messages.scss
+++ b/admin/src/Scss/Pages/Messages/messages.scss
@@ -1,16 +1,23 @@
 @use "../../General/" as g;
 .messages-con {
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
   padding: 2rem;
-  .heading {
-    h2 {
-      color: g.$fontColor;
-      font-size: 4.6rem;
-    }
-  }
   .messages-con {
     display: flex;
     flex-direction: column;
     gap: 2.4rem;
     height: 100vh;
+    overflow: auto;
+    &::-webkit-scrollbar {
+      width: 1rem;
+      border-radius: 30px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: g.$primary;
+      border-radius: 8px;
+    }
   }
 }
