--- a/admin/src/Scss/style.scss
+++ b/admin/src/Scss/style.scss
@@ -10,3 +10,4 @@
 @use "./Pages/MainPanel/info-box.scss";
 @use "./Pages/Messages/message.scss";
 @use "./General/utilities";
+@use "./Pages/AddProjectPanel/image-input";
