--- a/admin/src/Scss/Pages/AddProjectPanel/add-project-panel.scss
+++ b/admin/src/Scss/Pages/AddProjectPanel/add-project-panel.scss
@@ -3,15 +3,21 @@
   flex-direction: column;
   padding: 4.8rem;
   gap: 3.6rem;
-  width: 60%;
+  width: 100%;
   .form-con {
     form {
       display: flex;
       flex-direction: column;
       gap: 2.4rem;
       .inputs {
-        display: flex;
-        width: 100%;
+        display: grid;
+        grid-template-columns: 3fr 2fr;
+        column-gap: 3.2rem;
+        .image-inputs {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
         .text-inputs {
           display: flex;
           flex-direction: column;
