--- a/frontend/src/Scss/Css/App.css
+++ b/frontend/src/Scss/Css/App.css
@@ -44,6 +44,21 @@ h2 {
   font-weight: 800;
 }
 
+.visible {
+  opacity: 1 !important;
+  transition: all ease-in-out 300ms;
+  transition-delay: 500ms;
+}
+
+.visible-pop-up {
+  top: 15% !important;
+  transition: all ease-in-out 1s;
+}
+
+.opacity-pop-up {
+  opacity: 0;
+}
+
 .sticky-nav {
   position: fixed;
   top: -100%;
@@ -185,6 +200,58 @@ h2 {
   align-items: center;
   position: relative;
 }
+.project-card .image-con {
+  width: 100%;
+  position: relative;
+}
+.project-card .image-con .tech-overlap {
+  opacity: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 100%;
+  background: rgba(20, 26, 42, 0.25);
+  backdrop-filter: blur(12px);
+  z-index: 10;
+  border-radius: 9px;
+  transition: all ease-in-out 300ms;
+}
+.project-card .image-con .tech-overlap .tech-con {
+  height: 100%;
+  width: fit-content;
+  padding: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  column-gap: 1.6rem;
+  row-gap: 1.6rem;
+  flex-wrap: wrap;
+  opacity: 0;
+}
+.project-card .image-con .tech-info-button {
+  display: inline-block;
+  border-radius: 8px;
+  border: 2px solid transparent;
+  background: linear-gradient(130deg, #1649ff, rgba(227, 0, 204, 0.314), rgba(227, 0, 204, 0.296), #1649ff) border-box;
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  position: absolute;
+  right: -95%;
+  top: 5%;
+  z-index: 15;
+}
+.project-card .image-con .tech-info-button .svg {
+  padding: 0.5rem 1rem;
+  background-image: linear-gradient(80deg, #2c313f, #141a2a);
+  display: inline-block;
+  border-radius: 8px;
+}
+.project-card .image-con .tech-info-button .svg svg {
+  transition: all ease-in-out 500ms;
+}
+.project-card .image-con img {
+  width: 100%;
+}
 .project-card .info-con {
   display: flex;
   flex-direction: column;
@@ -204,22 +271,6 @@ h2 {
 .project-card .info .header-con h4 {
   color: #fafefa;
   font-size: 3.2rem;
-}
-.project-card .info .header-con .tech-info {
-  display: inline-block;
-  border-radius: 8px;
-  border: 2px solid transparent;
-  background: linear-gradient(130deg, #1649ff, rgba(227, 0, 204, 0.314), rgba(227, 0, 204, 0.296), #1649ff) border-box;
-  -webkit-mask-composite: xor;
-  mask-composite: exclude;
-  top: -25px;
-  left: -25px;
-}
-.project-card .info .header-con .tech-info .svg {
-  padding: 0.5rem 1rem;
-  background-image: linear-gradient(80deg, #2c313f, #141a2a);
-  display: inline-block;
-  border-radius: 8px;
 }
 .project-card .desc-con p {
   line-height: 3rem;
@@ -261,6 +312,58 @@ h2 {
   position: absolute;
 }
 
+.tech-element {
+  height: fit-content;
+  width: fit-content;
+}
+.tech-element .tech-info {
+  display: inline-block;
+  border-radius: 8px;
+  border: 2px solid transparent;
+  background: linear-gradient(130deg, #1649ff, rgba(227, 0, 204, 0.314), rgba(227, 0, 204, 0.296), #1649ff) border-box;
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+}
+.tech-element .tech-info h4 {
+  padding: 1rem;
+  background-image: linear-gradient(80deg, #2c313f, #141a2a);
+  display: inline-block;
+  border-radius: 8px;
+  font-size: 1.8rem;
+  text-transform: capitalize;
+  color: #fafefa;
+}
+
+.form .pop-up {
+  position: fixed;
+  top: -100%;
+  right: 15%;
+  padding: 1rem;
+  border-radius: 8px;
+  background: rgba(20, 26, 42, 0.25);
+  backdrop-filter: blur(12px);
+  overflow: hidden;
+  transition: all ease-in-out 3s;
+}
+.form .pop-up p {
+  position: relative;
+  color: #fafefa;
+}
+.form .pop-up span {
+  background-color: #1649ff;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: -100%;
+  top: 0;
+  border-radius: 8px;
+  transition: ease-in left 2s;
+}
+.form .pop-up .ani {
+  left: 0 !important;
+  transition-delay: 1s;
+}
+
 .home {
   margin-top: 9.6rem;
   margin-bottom: 25.6rem;
@@ -274,7 +377,7 @@ h2 {
   height: 50rem;
   width: 50rem;
   background-color: #1649ff;
-  filter: blur(110px);
+  filter: blur(150px);
   z-index: -100000;
   opacity: 60%;
   border-radius: 50%;
@@ -299,47 +402,6 @@ h2 {
   color: #fafefa;
   font-size: 8.6rem;
   font-weight: 800;
-}
-.home .content-con .slogans-container .slogans .big-slogans .cv-download {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: linear-gradient(130deg, #1649ff, #e300cb);
-  padding: 2rem 3rem;
-  border-radius: 60%;
-  top: 1px;
-  right: 0;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.home .content-con .slogans-container .slogans .big-slogans .cv-download::before {
-  content: " ";
-  display: inline-block;
-  background-image: linear-gradient(130deg, #1649ff, #e300cb);
-  height: 130%;
-  width: 130%;
-  position: absolute;
-  z-index: -10000;
-  top: -15px;
-  border-radius: 50%;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  opacity: 60%;
-}
-.home .content-con .slogans-container .slogans .big-slogans .cv-download .third-ellipse {
-  display: inline-block;
-  background-image: linear-gradient(130deg, #1649ff, #e300cb);
-  height: 160%;
-  width: 160%;
-  position: absolute;
-  z-index: -10000;
-  top: -30px;
-  border-radius: 50%;
-  opacity: 40%;
-}
-.home .content-con .slogans-container .slogans .big-slogans .cv-download .text {
-  color: #fafefa;
-  font-size: 3.2rem;
-  font-weight: 700;
 }
 .home .content-con .slogans-container .sub-heading h4 {
   font-size: 1.6rem;
@@ -367,12 +429,11 @@ h2 {
 }
 .about .content-con .info-con::after {
   content: " ";
-  display: inline-block;
   height: 50rem;
   width: 50rem;
   background-color: #e300cb;
-  filter: blur(110px);
-  z-index: -30;
+  filter: blur(150px);
+  z-index: -100000;
   opacity: 60%;
   border-radius: 50%;
   position: absolute;
@@ -381,12 +442,11 @@ h2 {
 }
 .about .content-con .info-con .desc::after {
   content: " ";
-  display: inline-block;
   height: 50rem;
   width: 50rem;
   background-color: #1649ff;
-  filter: blur(110px);
-  z-index: -30;
+  filter: blur(150px);
+  z-index: -100000;
   opacity: 60%;
   border-radius: 50%;
   position: absolute;
@@ -415,12 +475,12 @@ h2 {
 }
 .skill .content-con .skill-con::after {
   content: " ";
-  display: inline-block;
+  content: " ";
   height: 50rem;
   width: 50rem;
   background-color: #1649ff;
-  filter: blur(110px);
-  z-index: -30;
+  filter: blur(150px);
+  z-index: -100000;
   opacity: 60%;
   border-radius: 50%;
   position: absolute;
@@ -436,12 +496,12 @@ h2 {
 }
 .skill .content-con .skill-con .skill-heading::after {
   content: " ";
-  display: inline-block;
+  content: " ";
   height: 50rem;
   width: 50rem;
   background-color: #e300cb;
-  filter: blur(110px);
-  z-index: -30;
+  filter: blur(150px);
+  z-index: -100000;
   opacity: 60%;
   border-radius: 50%;
   position: absolute;
@@ -465,6 +525,13 @@ h2 {
   color: #fafefa;
 }
 
+.skill-card-con {
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.skill-card-con.active {
+  transform: scale(1.1);
+}
 .skill-card-con .skill-name {
   position: relative;
   border-radius: 17px; /*1*/
@@ -483,6 +550,46 @@ h2 {
   align-items: center;
   justify-content: center;
   z-index: 10000;
+}
+.skill-card-con .skill-name h4.active {
+  background: linear-gradient(80deg, #141a2a, #2c313f, #141a2a, #2c313f, #141a2a, #2c313f, #2c313f, #141a2a, #2c313f);
+  background-size: 400% 400%;
+  -webkit-animation: AnimationName 16s ease infinite;
+  -moz-animation: AnimationName 16s ease infinite;
+  animation: AnimationName 16s ease infinite;
+}
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 0% 60%;
+  }
+  50% {
+    background-position: 100% 41%;
+  }
+  100% {
+    background-position: 0% 60%;
+  }
+}
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 0% 60%;
+  }
+  50% {
+    background-position: 100% 41%;
+  }
+  100% {
+    background-position: 0% 60%;
+  }
+}
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 60%;
+  }
+  50% {
+    background-position: 100% 41%;
+  }
+  100% {
+    background-position: 0% 60%;
+  }
 }
 .skill-card-con .skill-name .skill-svg {
   position: absolute;
@@ -542,12 +649,11 @@ h2 {
 }
 .portfolio::after {
   content: " ";
-  display: inline-block;
   height: 50rem;
   width: 50rem;
   background-color: #e300cb;
-  filter: blur(210px);
-  z-index: -30;
+  filter: blur(150px);
+  z-index: -100000;
   opacity: 60%;
   border-radius: 50%;
   position: absolute;
@@ -556,12 +662,11 @@ h2 {
 }
 .portfolio::before {
   content: " ";
-  display: inline-block;
   height: 50rem;
   width: 50rem;
   background-color: #1649ff;
-  filter: blur(210px);
-  z-index: -30;
+  filter: blur(150px);
+  z-index: -100000;
   opacity: 60%;
   border-radius: 50%;
   position: absolute;
@@ -629,37 +734,36 @@ h2 {
   gap: 3.6rem;
 }
 
-.form-con form {
+.form-con .form {
   display: flex;
   flex-direction: column;
   gap: 3.6rem;
   position: relative;
 }
-.form-con form::after {
+.form-con .form::after {
   content: " ";
-  display: inline-block;
   height: 50rem;
   width: 50rem;
   background-color: #e300cb;
-  filter: blur(170px);
-  z-index: -30;
+  filter: blur(150px);
+  z-index: -100000;
   opacity: 60%;
   border-radius: 50%;
   position: absolute;
   bottom: -100px;
   right: -250px;
 }
-.form-con form .form-input {
+.form-con .form .form-input {
   display: flex;
   flex-direction: column;
 }
-.form-con form .form-input label {
+.form-con .form .form-input label {
   font-size: 1.6rem;
   color: #ada9bb;
   font-weight: 600;
 }
-.form-con form .form-input input[type=text],
-.form-con form .form-input input[type=email] {
+.form-con .form .form-input input[type=text],
+.form-con .form .form-input input[type=email] {
   height: 3.6rem;
   border-radius: 8px;
   box-shadow: inset 0 0 10px #1649ff;
@@ -670,7 +774,7 @@ h2 {
   font-family: "Raleway", sans-serif;
   font-weight: 600;
 }
-.form-con form .form-input textarea {
+.form-con .form .form-input textarea {
   border-radius: 8px;
   box-shadow: inset 0 0 10px #1649ff;
   padding: 1rem;
@@ -867,6 +971,7 @@ footer .logo-con .socials .social {
 }
 .all-projects .heading-con .button-con button {
   padding: 1rem;
+  background-color: #484848;
 }
 .all-projects .project-con {
   display: flex;
@@ -926,4 +1031,45 @@ footer .logo-con .socials .social {
   100% {
     background-position: 2% 0%;
   }
+}
+.home .cv-download {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: linear-gradient(130deg, #1649ff, #e300cb);
+  padding: 2rem 3rem;
+  border-radius: 60%;
+  top: 1px;
+  right: 0;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.home .cv-download::before {
+  content: " ";
+  display: inline-block;
+  background-image: linear-gradient(130deg, #1649ff, #e300cb);
+  height: 130%;
+  width: 130%;
+  position: absolute;
+  z-index: -10000;
+  top: -15px;
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  opacity: 60%;
+}
+.home .cv-download .third-ellipse {
+  display: inline-block;
+  background-image: linear-gradient(130deg, #1649ff, #e300cb);
+  height: 160%;
+  width: 160%;
+  position: absolute;
+  z-index: -10000;
+  top: -30px;
+  border-radius: 50%;
+  opacity: 40%;
+}
+.home .cv-download .text {
+  color: #fafefa;
+  font-size: 3.2rem;
+  font-weight: 700;
 }
