--- a/frontend/src/Scss/Pages/ContactPage/_contact-form.scss
+++ b/frontend/src/Scss/Pages/ContactPage/_contact-form.scss
@@ -1,20 +1,11 @@
 .form-con {
-  form {
+  .form {
     display: flex;
     flex-direction: column;
     gap: 3.6rem;
     position: relative;
     &::after {
-      content: " ";
-      display: inline-block;
-      height: 50rem;
-      width: 50rem;
-      background-color: $secondary;
-      filter: blur(170px);
-      z-index: -30;
-      opacity: 60%;
-      border-radius: 50%;
-      position: absolute;
+      @include elipse($secondary);
       bottom: -100px;
       right: -250px;
     }
