--- a/frontend/src/Scss/Pages/Portfolio-page/_portfolio-page.scss
+++ b/frontend/src/Scss/Pages/Portfolio-page/_portfolio-page.scss
@@ -2,30 +2,12 @@
   position: relative;
   margin-bottom: 25.6rem;
   &::after {
-    content: " ";
-    display: inline-block;
-    height: 50rem;
-    width: 50rem;
-    background-color: $secondary;
-    filter: blur(210px);
-    z-index: -30;
-    opacity: 60%;
-    border-radius: 50%;
-    position: absolute;
+    @include elipse($secondary);
     left: -227px;
     top: -14px;
   }
   &::before {
-    content: " ";
-    display: inline-block;
-    height: 50rem;
-    width: 50rem;
-    background-color: $primary;
-    filter: blur(210px);
-    z-index: -30;
-    opacity: 60%;
-    border-radius: 50%;
-    position: absolute;
+    @include elipse($primary);
     right: -227px;
     bottom: -180px;
   }
